<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Assurance</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="clients">Clients</string>
     <string name="admin">Admin</string>
     <string name="add">Add Clients</string>
     <string name="logout">Log Out</string>
      <string name="WELCOME">Welcome</string>
       <string name="all">View All Clients</string>
         <string name="search">Search Plate</string>
         <string name="LOGIN">Login</string>
          <string name="Email">Email</string>
         <string name="Password">Password</string>
         <string name="notemp">I AM NOT AN EMPLOYEE!</string>
          <string name="ClientName">Client Name</string>
           <string name="Adress">Address</string>
          <string name="Phone">Phone</string>
          <string name="Plate">Plate</string>
          <string name="Car">Car</string>
            <string name="Fees">Fees USD</string>
          <string name="Create">Create New Entry</string>
            <string name="SearchPlate">Search Plate Number</string>
          <string name="Search">Search</string>
           <string name="edit">Edit</string>
          
          
          
         <string name="error_config">Please set the %1$s constant and recompile the app.</string>
    <string name="already_registered">Device is already registered on server.</string>
    <string name="gcm_registered">From GCM: device successfully registered!</string>
    <string name="gcm_unregistered">From GCM: device successfully unregistered!</string>
    <string name="gcm_message">From GCM: you got message!</string>
    <string name="gcm_error">From GCM: error (%1$s).</string>
    <string name="gcm_recoverable_error">From GCM: recoverable error (%1$s).</string>
    <string name="gcm_deleted">From GCM: server deleted %1$d pending messages!</string>
    <string name="server_registering">Trying (attempt %1$d/%2$d) to register device on Demo Server.</string>
    <string name="server_registered">From Demo Server: successfully added device!</string>
    <string name="server_unregistered">From Demo Server: successfully removed device!</string>
    <string name="server_register_error">Could not register device on Demo Server after %1$d attempts.</string>
    <string name="server_unregister_error">Could not unregister device on Demo Server (%1$s).</string>
    <string name="options_register">Register</string>
    <string name="options_unregister">Unregister</string>
    <string name="options_clear">Clear</string>
    <string name="options_exit">Exit</string>
</resources>
