<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="fill_parent"
android:layout_height="fill_parent"
android:orientation="vertical"
>

<LinearLayout 
    android:id="@+id/linearLayout1"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    
     >
     
    <!-- Name -->
    <TextView android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/ClientName"
        android:paddingLeft="10dip"
        android:paddingRight="10dip"
        android:paddingTop="10dip"
        android:textSize="17sp"/>
    
    <!-- Input Name -->
	<EditText android:id="@+id/inputName"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_margin="5dip"
	    android:layout_marginBottom="15dip"
	    android:singleLine="true"/>
	
	<!-- Adress -->
    <TextView android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/Adress"
        android:paddingLeft="10dip"
        android:paddingRight="10dip"
        android:paddingTop="10dip"
        android:textSize="17sp"/>
    
    <!-- Input Adress -->
	<EditText android:id="@+id/inputAdress" 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_margin="5dip"
	    android:layout_marginBottom="15dip"
	    android:lines="4"
	    android:gravity="top"/>
	
	<!-- Phone -->
    <TextView android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/Phone"
        android:paddingLeft="10dip"
        android:paddingRight="10dip"
        android:paddingTop="10dip"
        android:textSize="17sp"/>
    
    <!-- Phone -->
	<EditText android:id="@+id/inputPhone" 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_margin="5dip"
	    android:layout_marginBottom="15dip"
	    android:singleLine="true"
	    />
	
		<!-- Plate -->
    <TextView android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/Plate"
        android:paddingLeft="10dip"
        android:paddingRight="10dip"
        android:paddingTop="10dip"
        android:textSize="17sp"/>
    
    <!-- Input Plate -->
	<EditText android:id="@+id/inputPlate" 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_margin="5dip"
	    android:layout_marginBottom="15dip"
	    android:singleLine="true"
	    android:inputType="numberDecimal"/>
	
	<!-- car -->
    <TextView android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/Car"
        android:paddingLeft="10dip"
        android:paddingRight="10dip"
        android:paddingTop="10dip"
        android:textSize="17sp"/>
    
    <!-- Input car-->
	<EditText android:id="@+id/inputCar"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_margin="5dip"
	    android:layout_marginBottom="15dip"
	    android:singleLine="true"/>
	
			<!-- Fees-->
    <TextView android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/Fees"
        android:paddingLeft="10dip"
        android:paddingRight="10dip"
        android:paddingTop="10dip"
        android:textSize="17sp"/>
    
    <!-- Input Fees -->
	<EditText android:id="@+id/inputFees" 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_margin="5dip"
	    android:layout_marginBottom="15dip"
	    android:singleLine="true"
	    android:inputType="numberDecimal"/>
	

	<LinearLayout android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal">
	    <!-- Button Create Product -->
	<Button android:id="@+id/btnSave" 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:text="Save Changes"
	    android:layout_weight="1"/>
	
	<!-- Button Create Product -->
	<Button android:id="@+id/btnDelete" 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:text="Delete"
	    android:layout_weight="1"/>	    
	</LinearLayout>
</LinearLayout>
</ScrollView>